Base HTML et CSS réalisées, Mise en places des Models, Templates, API et Factory pour affichages du site et de l'ensemble des cartes de recettes

--- a/front/index.html
+++ b/front/index.html
@@ -5,11 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="./data/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">    
+    <script src="https://kit.fontawesome.com/89ed478db9.js" crossorigin="anonymous"></script>
+    <title>Les petits plats</title>
 </head>
 <body>
+    <header>
+    </header>
+    <main>
+    </main>
+    <!-- API -->
+    <script src="./script/api/api.js"></script>
+    <!-- Factory -->
+    <script src="./script/factory/RecipeFactory.js"></script>
+    <!-- Models -->
+    <script src="./script/models/RecipeCardModel.js"></script>
+    <script src="./script/models/TagsModel.js"></script>
+    <!-- Template -->
+    <script src="./script/templates/Header.js"></script>
+    <script src="./script/templates/RecipeCard.js"></script>
+    <!-- Init -->
     <script src="./script/main.js"></script>
 </body>
 </html>
