Refactorisation des fonctions de tri, mise en forme, affichage, filtre des tags

--- a/front/index.html
+++ b/front/index.html
@@ -29,6 +29,8 @@
     <!-- Template -->
     <script src="./script/templates/Header.js"></script>
     <script src="./script/templates/RecipeCard.js"></script>
+    <!-- Filters -->
+    <script src="./script/filters/TagFilter.js"></script>
     <!-- Init -->
     <script src="./script/main.js"></script>
 </body>
