Reprise du code, HTML et CSS revus, Fonction de filtres par Tags fonctionnel, reste Fonction de suppression des tags + recherche via searchbar

--- a/front/index.html
+++ b/front/index.html
@@ -21,16 +21,19 @@
     </main>
     <!-- API -->
     <script src="./script/api/api.js"></script>
-    <!-- Factory -->
-    <script src="./script/factory/RecipeFactory.js"></script>
     <!-- Models -->
     <script src="./script/models/RecipeCardModel.js"></script>
     <script src="./script/models/TagsModel.js"></script>
     <!-- Template -->
-    <script src="./script/templates/Header.js"></script>
-    <script src="./script/templates/RecipeCard.js"></script>
+    <script src="./script/templates/HeaderTemplate.js"></script>
+    <script src="./script/templates/RecipeCardTemplate.js"></script>
+    <script src="./script/templates/TagTemplate.js"></script>
     <!-- Filters -->
-    <script src="./script/filters/TagFilter.js"></script>
+    <script src="./script/filters/RecipesFilter.js"></script>
+    <script src="./script/filters/SearchbarFilter.js"></script>
+    <script src="./script/filters/TagsFilter.js"></script>
+    <!-- TagsList -->
+    <script src="./script/tagsList/TagsListFunctions.js"></script>
     <!-- Init -->
     <script src="./script/main.js"></script>
 </body>
